@@ -4,7 +4,6 @@ import java.io.InputStream;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -14,15 +13,14 @@ import java.util.Set;
 
 import org.apache.commons.lang3.Validate;
 import org.apache.commons.lang3.reflect.MethodUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.Marker;
-import org.apache.logging.log4j.MarkerManager;
 import org.objectweb.asm.ClassReader;
 import org.objectweb.asm.Opcodes;
 import org.objectweb.asm.Type;
 import org.objectweb.asm.tree.AnnotationNode;
 import org.objectweb.asm.tree.ClassNode;
+import org.slf4j.Logger;
+import org.slf4j.Marker;
+import org.slf4j.MarkerFactory;
 
 import com.google.common.base.Strings;
 import com.google.common.collect.ArrayListMultimap;
@@ -31,6 +29,7 @@ import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Multimap;
 import com.google.common.collect.Sets;
+import com.mojang.logging.LogUtils;
 
 import it.unimi.dsi.fastutil.objects.Object2IntArrayMap;
 import it.unimi.dsi.fastutil.objects.Object2IntMap;
@@ -136,11 +135,10 @@ import snownee.kiwi.util.Util;
 @Mod(Kiwi.MODID)
 public class Kiwi implements ModInitializer {
 	public static final String MODID = "kiwi";
-	public static final String NAME = "Kiwi";
 	public static final RegistryLookup registryLookup = new RegistryLookup();
-	static final Marker MARKER = MarkerManager.getMarker("Init");
+	static final Marker MARKER = MarkerFactory.getMarker("INIT");
 	private static final Map<String, CreativeModeTab> GROUPS = Maps.newHashMap();
-	public static Logger logger = LogManager.getLogger(Kiwi.NAME);
+	public static final Logger LOGGER = LogUtils.getLogger();
 	public static Map<ResourceLocation, Boolean> defaultOptions = Maps.newHashMap();
 	public static MinecraftServer currentServer;
 	private static Multimap<String, KiwiAnnotationData> moduleData = ArrayListMultimap.create();
@@ -275,17 +273,17 @@ public class Kiwi implements ModInitializer {
 	}
 
 	private static void registerTabs() {
-		registerTab("building", CreativeModeTabs.BUILDING_BLOCKS);
-		registerTab("colored", CreativeModeTabs.COLORED_BLOCKS);
-		registerTab("combat", CreativeModeTabs.COMBAT);
-		registerTab("food", CreativeModeTabs.FOOD_AND_DRINKS);
-		registerTab("functional", CreativeModeTabs.FUNCTIONAL_BLOCKS);
-		registerTab("ingredients", CreativeModeTabs.INGREDIENTS);
-		registerTab("natural", CreativeModeTabs.NATURAL_BLOCKS);
-		registerTab("op", CreativeModeTabs.OP_BLOCKS);
-		registerTab("redstone", CreativeModeTabs.REDSTONE_BLOCKS);
-		registerTab("spawnEggs", CreativeModeTabs.SPAWN_EGGS);
-		registerTab("tools", CreativeModeTabs.TOOLS_AND_UTILITIES);
+		registerTab(Categories.BUILDING_BLOCKS, CreativeModeTabs.BUILDING_BLOCKS);
+		registerTab(Categories.COLORED_BLOCKS, CreativeModeTabs.COLORED_BLOCKS);
+		registerTab(Categories.COMBAT, CreativeModeTabs.COMBAT);
+		registerTab(Categories.FOOD_AND_DRINKS, CreativeModeTabs.FOOD_AND_DRINKS);
+		registerTab(Categories.FUNCTIONAL_BLOCKS, CreativeModeTabs.FUNCTIONAL_BLOCKS);
+		registerTab(Categories.INGREDIENTS, CreativeModeTabs.INGREDIENTS);
+		registerTab(Categories.NATURAL_BLOCKS, CreativeModeTabs.NATURAL_BLOCKS);
+		registerTab(Categories.OP_BLOCKS, CreativeModeTabs.OP_BLOCKS);
+		registerTab(Categories.REDSTONE_BLOCKS, CreativeModeTabs.REDSTONE_BLOCKS);
+		registerTab(Categories.SPAWN_EGGS, CreativeModeTabs.SPAWN_EGGS);
+		registerTab(Categories.TOOLS_AND_UTILITIES, CreativeModeTabs.TOOLS_AND_UTILITIES);
 	}
 
 	static CreativeModeTab getGroup(String path) {
@@ -378,7 +376,7 @@ public class Kiwi implements ModInitializer {
 						}
 						new ConfigHandler(mod, fileName, type, clazz, hasModules);
 					} catch (ClassNotFoundException e) {
-						logger.catching(e);
+						LOGGER.error(MARKER, "Failed to load config class {}", config.target());
 					}
 				}
 			}
@@ -390,7 +388,7 @@ public class Kiwi implements ModInitializer {
 			}
 		}
 
-		logger.info(MARKER, "Processing " + moduleData.size() + " KiwiModule annotations");
+		LOGGER.info(MARKER, "Processing " + moduleData.size() + " KiwiModule annotations");
 
 		for (Entry<String, KiwiAnnotationData> entry : moduleData.entries()) {
 			KiwiAnnotationData optional = classOptionalMap.get(entry.getValue().target());
@@ -438,7 +436,7 @@ public class Kiwi implements ModInitializer {
 				String methodName = (String) k.data().get("method");
 				List<String> values = (List<String>) k.data().get("value");
 				if (values == null) {
-					values = Arrays.asList(v);
+					values = List.of(v);
 				}
 				List<ResourceLocation> ids = values.stream().map(s -> checkPrefix(s, v)).toList();
 				for (ResourceLocation id : ids) {
@@ -455,8 +453,7 @@ public class Kiwi implements ModInitializer {
 				}
 			} catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException |
 					 ClassNotFoundException e) {
-				logger.error(MARKER, "Failed to access to LoadingCondition: {}", k);
-				logger.catching(e);
+				LOGGER.error(MARKER, "Failed to access to LoadingCondition: %s".formatted(k), e);
 			}
 		});
 
@@ -549,8 +546,7 @@ public class Kiwi implements ModInitializer {
 				AbstractModule instance = (AbstractModule) clazz.getDeclaredConstructor().newInstance();
 				KiwiModules.add(id, instance, context);
 			} catch (Exception e) {
-				logger.error(MARKER, "Kiwi failed to initialize module class: {}", info.className);
-				logger.catching(e);
+				LOGGER.error(MARKER, "Kiwi failed to initialize module class: %s".formatted(info.className), e);
 				continue;
 			}
 		}
@@ -610,8 +606,7 @@ public class Kiwi implements ModInitializer {
 					try {
 						field.set(null, info.module);
 					} catch (IllegalArgumentException | IllegalAccessException e) {
-						logger.error(MARKER, "Kiwi failed to inject module instance to module class: {}", info.module.uid);
-						logger.catching(e);
+						LOGGER.error(MARKER, "Kiwi failed to inject module instance to module class: %s".formatted(info.module.uid), e);
 					}
 					continue;
 				}
@@ -620,8 +615,7 @@ public class Kiwi implements ModInitializer {
 				try {
 					o = field.get(null);
 				} catch (IllegalArgumentException | IllegalAccessException e) {
-					logger.error(MARKER, "Kiwi failed to catch game object: {}", field);
-					logger.catching(e);
+					LOGGER.error(MARKER, "Kiwi failed to catch game object: %s".formatted(field), e);
 				}
 				if (o == null) {
 					continue;
@@ -651,8 +645,7 @@ public class Kiwi implements ModInitializer {
 							try {
 								tmpBuilderField.set(info.module, null);
 							} catch (Exception e) {
-								logger.error(MARKER, "Kiwi failed to clean used item builder: {}", tmpBuilderField);
-								logger.catching(e);
+								LOGGER.error(MARKER, "Kiwi failed to clean used item builder: %s".formatted(tmpBuilderField), e);
 							}
 						}
 					} else if (o instanceof Item) {
@@ -671,10 +664,10 @@ public class Kiwi implements ModInitializer {
 				tmpBuilderField = null;
 			}
 
-			logger.info(MARKER, "Module [{}:{}] initialized", modid, name);
+			LOGGER.info(MARKER, "Module [{}:{}] initialized", modid, name);
 			for (ResourceKey<?> key : counter.keySet()) {
 				String keyName = Util.trimRL(key.location());
-				logger.info(MARKER, "    {}: {}", keyName, counter.getInt(key));
+				LOGGER.info(MARKER, "    {}: {}", keyName, counter.getInt(key));
 			}
 		}
 
